--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,8 +54,8 @@ jobs:
     - name: Login to Docker
       uses: docker/login-action@v2
       with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+        username: NikolayEkaterinin
+        password: QAWs54977
     - name: Push to DockerHub
       uses: docker/build-push-action@v4
       with:
